[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = "0.4.1"
sync-unsafe-cell = "0.1.1"
voladdress = "1.4.0"

[profile.release]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
